    (Issue #2878, PR #2911)
  * AtomGroup now are pickled/unpickled without looking for its anchored
    Universe (PR #2893)
  * ensure that unistd.h is included on macOS when compiling ENCORE's spe.c
    (Issue #2934)
  * Fix tests for analysis.bat that could fail when run in parallel and that
    would create a test artifact (Issue #2979, PR #2981)

Enhancements
  * The PDB writer gives more control over how to write the atom ids
    (Issue #1072, PR #2886)
  * Preliminary support for the Linux ARM64 platform with minimal
    dependencies (PR #2956)
  * Refactored analysis.helanal into analysis.helix_analysis
    (Issue #2452, PR #2622)
  * Improved MSD code to accept `AtomGroup` and reject `UpdatingAtomGroup`
    and improved docs (Issue #2784)
  * Added the RDKitParser which creates a `core.topology.Topology` object from
    an `rdkit.Chem.rdchem.Mol` object, and the RDKitReader to read coordinates
    from RDKit conformers (Issue #2468, PR #2707)
  * Added the `Aromaticities` topology attribute, and the `aromatic` selection
    token (Issue #2468, PR #2707)
  * Added the `from_smiles` classmethod to the Universe (Issue #2468, PR #2707)
  * Added computation of Mean Squared Displacements (#2438, PR #2619)
  * Improved performances when parsing TPR files (PR #2804)
  * Added converter between Cartesian and Bond-Angle-Torsion coordinates (PR #2668)
  * Added Hydrogen Bond Lifetime via existing autocorrelation features (PR #2791)
  * Added Hydrogen Bond Lifetime keyword "between" (PR #2791)
  * Added lib.pickle_file_io module for pickling file handlers. (PR #2723)
  * Added pickle function to `Universe` and all Readers (without transformation)
    (PR #2723)
  * Dead code removed from the TPR parser and increased test coverage (PR #2840)
  * TPR parser exposes the elements topology attribute (PR #2858, see Issue #2553)
  * Added `H5MDReader` to coordinate readers (Issue #762, PR #2787)
  * Added new kwargs `select_remove` and `select_protein` to