@@ -68,6 +68,8 @@ Fixes
     would create a test artifact (Issue #2979, PR #2981)
 
 Enhancements
+  * Code for operations on compounds refactored, centralized and optimized for
+    performance (Issue #3000)
   * The PDB writer gives more control over how to write the atom ids
     (Issue #1072, PR #2886)
   * Preliminary support for the Linux ARM64 platform with minimal
